<resources>
    <string name="app_name">Rock-Paper-Scissors</string>
    <string name="gun_selection">Seleção de Arma.</string>
    <string name="winner">"Vencedor da batalha: "</string>
    <string name="draw">Empate, rodada desconsiderada.</string>
    <string name="won_the_match">" venceu o confronto."</string>
    <string name="choose_gun">" deve escolher uma arma."</string>
    <string name="choose_gun_player">, selecione qual a arma que utilizará no confronto:</string>
    <string name="rock">Pedra</string>
    <string name="scissors">Tesoura</string>
    <string name="paper">Papel</string>
    <string name="fight">LUTAR</string>
    <string name="close">Fechar</string>
    <string name="scoreboard">Placar</string>
    <string name="player_name">Nome do competidor</string>
    <string name="game_type">Tipo de jogo</string>
    <string name="start_game">Iniciar Jogo</string>
    <string name="start_game_alone">Jogar sozinho</string>
</resources>